# Casio-fx-991ES-PLUS-simulator

./: .gitignore  README.md  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/calculator/: MainActivityUiTest.kt  NativeCalcInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  calc.cpp  calc.h  evaluator.cpp  evaluator.h  native-lib.cpp  parsing.cpp  parsing.h
app/src/main/java/com/example/calculator/: MainActivity.kt
app/src/main/res/animator/: btn_raise.xml
app/src/main/res/drawable/: btn_dark.xml  btn_dpad.xml  btn_dpad_center.xml  btn_gray.xml  btn_green.xml  btn_orange.xml  button_border.xml  button_gradient_gray.xml  button_gradient_green.xml  button_gradient_number.xml  button_gradient_orange.xml  calculator_background.xml  directional_pad_bg.xml  display_area_bg.xml  dpad_arrow_bg.xml  dpad_arrow_button.xml  dpad_center_bg.xml  main_display_bg.xml  status_bar_bg.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: styles.xml  themes.xml
